# energy-forecast

./: .gitignore  LEARNING_PLAN.md  main.py  pyproject.toml
notebooks/: 01_exploration.ipynb  02_forecasting.ipynb
